# visual_search_experiment

./: README.md  pyproject.toml  visual-search-experiment-report.ipynb
data/: ex3.csv  ex_1.csv  ex_2.csv
