[tool.poetry]
name = "visual-search-experiment"
version = "0.1.0"
description = ""
authors = ["David Beinhauer <david.beinhauer@email.cz>"]
readme = "README.md"
packages = [{include = "visual_search_experiment"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
pretty = "^0.1"
jupyter = "^1.0.0"
pretty-jupyter = "^2.0.4"
jupyterlab = "^3.6.1"
seaborn = "^0.12.2"
statsmodels = "^0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
